@@ -132,6 +132,136 @@
 126=Applause
 127=Gunshot
 
+[GM Drumsets]
+0=Percussion 1
+1=Percussion 2
+2=Percussion 3
+3=Percussion 4
+4=Percussion 5
+5=Percussion 6
+6=Percussion 7
+7=Percussion 8
+8=Percussion 9
+9=Percussion 10
+10=Percussion 11
+11=Percussion 12
+12=Percussion 13
+13=Percussion 14
+14=Percussion 15
+15=Percussion 16
+16=Percussion 17
+17=Percussion 18
+18=Percussion 19
+19=Percussion 20
+20=Percussion 21
+21=Percussion 22
+22=Percussion 23
+23=Percussion 24
+24=Percussion 25
+25=Percussion 26
+26=Percussion 27
+27=Percussion 28
+28=Percussion 29
+29=Percussion 30
+30=Percussion 31
+31=Percussion 32
+32=Percussion 33
+33=Percussion 34
+34=Percussion 35
+35=Percussion 36
+36=Percussion 37
+37=Percussion 38
+38=Percussion 39
+39=Percussion 40
+40=Percussion 41
+41=Percussion 42
+42=Percussion 43
+43=Percussion 44
+44=Percussion 45
+45=Percussion 46
+46=Percussion 47
+47=Percussion 48
+48=Percussion 49
+49=Percussion 50
+50=Percussion 51
+51=Percussion 52
+52=Percussion 53
+53=Percussion 54
+54=Percussion 55
+55=Percussion 56
+56=Percussion 57
+57=Percussion 58
+58=Percussion 59
+59=Percussion 60
+60=Percussion 61
+61=Percussion 62
+62=Percussion 63
+63=Percussion 64
+64=Percussion 65
+65=Percussion 66
+66=Percussion 67
+67=Percussion 68
+68=Percussion 69
+69=Percussion 70
+70=Percussion 71
+71=Percussion 72
+72=Percussion 73
+73=Percussion 74
+74=Percussion 75
+75=Percussion 76
+76=Percussion 77
+77=Percussion 78
+78=Percussion 79
+79=Percussion 80
+80=Percussion 81
+81=Percussion 82
+82=Percussion 83
+83=Percussion 84
+84=Percussion 85
+85=Percussion 86
+86=Percussion 87
+87=Percussion 88
+88=Percussion 89
+89=Percussion 90
+90=Percussion 91
+91=Percussion 92
+92=Percussion 93
+93=Percussion 94
+94=Percussion 95
+95=Percussion 96
+96=Percussion 97
+97=Percussion 98
+98=Percussion 99
+99=Percussion 100
+100=Percussion 101
+101=Percussion 102
+102=Percussion 103
+103=Percussion 104
+104=Percussion 105
+105=Percussion 106
+106=Percussion 107
+107=Percussion 108
+108=Percussion 109
+109=Percussion 110
+110=Percussion 111
+111=Percussion 112
+112=Percussion 113
+113=Percussion 114
+114=Percussion 115
+115=Percussion 116
+116=Percussion 117
+117=Percussion 118
+118=Percussion 119
+119=Percussion 120
+120=Percussion 121
+121=Percussion 122
+122=Percussion 123
+123=Percussion 124
+124=Percussion 125
+125=Percussion 126
+126=Percussion 127
+127=Percussion 128
+
 [Roland GS Capital Tones]
 0=Piano 1
 1=Piano 2
@@ -3252,7 +3382,8 @@ Patch[*]=General MIDI
 Control=Standard
 
 [General MIDI Drums]
-Patch[*]=1..128
+Control=Standard
+Patch[*]=GM Drumsets
 Key[*,*]=General MIDI Drums
 Drum[*,*]=1
 
