@@ -86,6 +86,7 @@ const char SYSEXFILEDATA[] = "SYSEXFILEDATA\0";
 
 const int TOOLBARLABELMARGIN = 5;
 const int MIDIGMDRUMSCHANNEL = 9;
+const int MIDICHANNELS = 16;
 
 #if defined(Q_WS_MAC) && defined(QT_MAC_USE_COCOA)
 #error "This program requires Qt built with the Carbon framework. Sorry."
